<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference android:title="@string/profile" android:key="profile" />
    <PreferenceCategory android:title="@string/connection">
        <EditTextPreference android:singleLine="true" android:title="@string/server_ip" android:key="server_ip" />
        <EditTextPreference android:singleLine="true" android:title="@string/server_port" android:key="server_port" android:inputType="number" />
        <CheckBoxPreference android:title="@string/ipv6_proxy" android:key="ipv6_proxy" android:summary="@string/ipv6_proxy_sum" />
        <CheckBoxPreference android:title="@string/udp_proxy" android:key="udp_proxy" android:summary="@string/udp_proxy_sum" />
        <EditTextPreference android:singleLine="true" android:title="@string/udp_gw" android:key="udp_gw" android:dependency="udp_proxy" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/authentication">
        <CheckBoxPreference android:title="@string/auth_userpw" android:key="auth_userpw" android:defaultValue="false" />
        <EditTextPreference android:singleLine="true" android:title="@string/auth_username" android:key="auth_username" android:dependency="auth_userpw" />
        <EditTextPreference android:singleLine="true" android:title="@string/auth_password" android:key="auth_password" android:dependency="auth_userpw" android:inputType="textPassword" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/advanced">
        <ListPreference android:entries="@array/adv_routes" android:title="@string/adv_route" android:key="adv_route" android:entryValues="@array/adv_routes_values" />
        <EditTextPreference android:singleLine="true" android:title="@string/adv_dns" android:key="adv_dns" />
        <EditTextPreference android:singleLine="true" android:title="@string/adv_dns_port" android:key="adv_dns_port" android:inputType="number" />
        <CheckBoxPreference android:title="@string/adv_auto_connect" android:key="adv_auto_connect" />
        <CheckBoxPreference android:title="@string/adv_per_app" android:key="adv_per_app" />
        <CheckBoxPreference android:title="@string/adv_app_bypass" android:key="adv_app_bypass" android:summary="@string/adv_app_bypass_sum" android:dependency="adv_per_app" />
        <EditTextPreference android:title="@string/adv_app_list" android:key="adv_app_list" android:summary="@string/adv_app_list_sum" android:dependency="adv_per_app" />
    </PreferenceCategory>
</PreferenceScreen>
